re PR c++/22545 (ICE with pointer to class member & user defined conversion operator)

PR c++/22545
	* call.c (add_builtin_candidate): Adjust for changes in
	representation of pointer-to-member types.

	PR c++/22545
	* g++.dg/expr/ptrmem7.C: New test.

From-SVN: r102506